# bluecheese

./: CMakeLists.txt  README.md  config.h.in  ootb.sh
.github/workflows/: cmake.yml
docs/: README.md
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  Info.plist  cliapplicationbase.cpp  cliapplicationbase.h  cliapplicationfactory.cpp  cliapplicationfactory.h  clioptions.h  connectedcliapplicationbase.cpp  connectedcliapplicationbase.h  discoverapplication.cpp  discoverapplication.h  getfenapplication.cpp  getfenapplication.h  listenapplication.cpp  listenapplication.h  main.cpp  sendfenapplication.cpp  sendfenapplication.h
src/common/: CMakeLists.txt  aicontroller.cpp  aicontroller.h  aiplayer.cpp  aiplayer.h  aiplayerfactory.h  applicationbase.cpp  applicationbase.h  applicationfacade.cpp  applicationfacade.h  applicationfactorybase.cpp  applicationfactorybase.h  commontranslations.cpp  commontranslations.h  compositeboard.cpp  compositeboard.h  connectionstate.cpp  connectionstate.h  gameprogress.cpp  gameprogress.h  guiapplicationbase.cpp  guiapplicationbase.h  guifacade.cpp  guifacade.h  options.cpp  options.h  randomaiplayer.cpp  randomaiplayer.h  stockfishaiplayer.cpp  stockfishaiplayer.h  version.h
src/desktop/: CMakeLists.txt  Info.plist  chessboardscene.cpp  chessboardscene.h  configureenginedialog.cpp  configureenginedialog.h  configureenginedialog.ui  connectingdialog.cpp  connectingdialog.h  connectingdialog.ui  desktopapplication.cpp  desktopapplication.h  desktopapplicationfactory.cpp  desktopapplicationfactory.h  desktopguifacade.cpp  desktopguifacade.h  discoverydialog.cpp  discoverydialog.h  discoverydialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newgamedialog.cpp  newgamedialog.h  newgamedialog.ui  promotiondialog.cpp  promotiondialog.h  promotiondialog.ui  syncdialog.cpp  syncdialog.h  syncdialog.ui
src/lib/: CMakeLists.txt  bleboardfactory.cpp  bleboardfactory.h  bleconnection.cpp  bleconnection.h  boardaddress.cpp  boardaddress_p.h  boardstate.cpp  chessupboard.cpp  chessupboard.h  connection.h  connectionfactory.cpp  connectionfactory.h  connectionmanager.cpp  connectionmanager_p.h  discovery.cpp  gameoptions.cpp  pgn.cpp  remoteboard.cpp  remoteboard_p.h
src/lib/include/: chessboard.h  chessboard_global.h
test/: CMakeLists.txt
test/common/: CMakeLists.txt  tst_aicontroller.cpp  tst_applicationfacade.cpp  tst_compositeboard.cpp
test/lib/: CMakeLists.txt  tst_algebraicnotation.cpp  tst_boardstate.cpp  tst_pgn.cpp
ts/: chessboard-cli_en_GB.ts  chessboard-common_en_GB.ts
